--- a/settings.ini
+++ b/settings.ini
@@ -1,17 +1,17 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = github
-lib_name = nbdev_template
+lib_name = drcstools
 # For Enterprise Git add variable repo_name and company name
 # repo_name = analytics
 # company_name = nike
 
-user = fastai
-# description = A description of your project
+user = florianboergel
+description = Tools for climate analysis
 # keywords = some keywords
-# author = Your Name
-# author_email = email@example.com
-# copyright = Your Name or Company Name
+author = Florian Boergel
+author_email = florianboergel@gmail.com
+copyright = Florian Boergel
 branch = master
 version = 0.0.1
 min_python = 3.6
