--- a/settings.ini
+++ b/settings.ini
@@ -8,7 +8,7 @@ lib_name = drcstools
 
 user = florianboergel
 description = Tools for climate analysis
-# keywords = some keywords
+keywords = climate
 author = Florian Boergel
 author_email = florianboergel@gmail.com
 copyright = Florian Boergel
