--- a/settings.ini
+++ b/settings.ini
@@ -29,7 +29,7 @@ requirements = numpy xarray tqdm matplotlib cartopy dask
 # Optional. Same format as setuptools console_scripts
 # console_scripts = 
 # Optional. Same format as setuptools dependency-links
-# dep_links = 
+dep_links = numpy
 
 ###
 # You probably won't need to change anything under here,
