--- a/settings.ini
+++ b/settings.ini
@@ -25,11 +25,11 @@ license = apache2
 status = 2
 
 # Optional. Same format as setuptools requirements
-requirements = numpy xarray tqdm matplotlib cartopy dask
+requirements = numpy xarray tqdm matplotlib dask
 # Optional. Same format as setuptools console_scripts
 # console_scripts = 
 # Optional. Same format as setuptools dependency-links
-dep_links = numpy
+#dep_links = 
 
 ###
 # You probably won't need to change anything under here,
