--- a/settings.ini
+++ b/settings.ini
@@ -25,7 +25,7 @@ license = apache2
 status = 2
 
 # Optional. Same format as setuptools requirements
-requirements = numpy xarray tqdm matplotlib dask netCDF4-python scipy
+requirements = numpy xarray tqdm matplotlib dask netcdf scipy
 # Optional. Same format as setuptools console_scripts
 # console_scripts = 
 # Optional. Same format as setuptools dependency-links
