--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -21,6 +21,9 @@ entries:
     - output: web,pdf
       title: helper_functions
       url: helper_functions.html
+    - output: web,pdf
+      title: Title
+      url: total_exchange_flow.html
     output: web
     title: drcstools
   output: web
